--- a/css/style.css
+++ b/css/style.css
@@ -1,475 +1,4 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video{
-margin:0;
-padding:0;
-border:0;
-font-size:100%;
-font:inherit;
-vertical-align:baseline;
-color: #1d1d1d;
-}
-.clr {
-    clear: both;
-}
-a {
- text-decoration: none;
-}
-
-/*====================================================*/
-
 body {
-    width: 1396px;
-    height: 1668px;
-    background-image: url(../img/Layer-32.jpg);
-    background-repeat: repeat;
-    z-index: -2;
-}
-
-.container {
-    margin: 0 auto;
-    box-shadow: 0 0 55px rgba(122, 122, 122, 0.5);
-    width: 940px;
-    height: 1668px;
-    background-image: url(../img/Layer-34.jpg);
-    background-repeat: repeat;
-    z-index: 0;
-}
-
-
-/*==================хэдер============*/
-
-.logo {
-    float: left;
-    box-shadow: 0px 1px 0px 0px #fff;
-    width: 36px;
-    height: 36px;
-    margin-top: 29px;
-    margin-left: 40px;
-}
-
-header h1 {
-    float: left;
-    font: 400 56px "Lobster", cursive;
-    color: #1d1d1d;
-    line-height: 21px;
-    text-align: left;
-    margin-top: 35px;
-    margin-left: 16px;
-}
-
-header h2 {
-    float: left;
-    font: 400 18px "Oswald", sans-serif;
-    color: #9b9b9b;
-    text-align: left;
-    margin-top: -4px;
-    margin-left: 92px;
-    text-shadow: 0px 1px 1px #ffffff;
-    text-transform: uppercase;
-}
-
-header {
-    width: 1140px;
-}
-
-form {
-    margin-top: -16px;
-    margin-left: 595px;
-    float: left;
-    overflow: hidden;
-}
-
-.search {
-    float: left;
-    width: 203px;
-    height: 32px;
-    border-radius: 4px;
-    box-shadow: 0px 1px 8px 0px #eee;
-}
-
-form label {
-    float: right;
-    width: 240px;
-    height: 34px;
-}
-
-label .fa {
-    color: #fff;
-    text-align: center;
-    font-size: 28px;
-    width: 33px;
-    height: 31px;
-    background-color: #3d3d3d;
-    border-radius: 4px;
-    margin-top: auto;
-}
-
-.line_hor {
-    background-image: url(../img/Group%201.png);
-    width: 871px;
-    height: 75px;
-    margin-top: 25px;
-    margin-left: 35px;
-    position: relative;
-}
-
-nav {
-    display: inline-block;
-    margin-top: 21px;
-}
-
-.line {
-    text-decoration: none;
-    margin-right: 77px;
-    font: 400 16px "Oswald", sans-serif;
-    line-height: 27px;
-    text-transform: uppercase;
-}
-
-.line_indent {
-    margin-left: 29px;
-}
-
-.line_vert {
-    position: absolute;
-    width: 0px;
-    height: 45px;
-    border: 1px solid #eaeaea;
-    top: 15px;
-}
-
-.line_vert_1 {
-    left: 109px;
-}
-
-.line_vert_2 {
-    left: 227px;
-}
-
-.line_vert_3 {
-    left: 365px;
-}
-
-.line_vert_4 {
-    left: 468px;
-}
-
-
-/*====================контент и сайдбар==========*/
-
-.area {
-    margin: auto;
-    width: 940px;
-    height: 1365px;
-    position: relative;
-}
-
-.sidebar,
-.content {
-    position: absolute;
-    top: 30px;
-}
-
-
-/*======================сайдбар=================*/
-
-.sidebar {
-    width: 252px;
-    left: 639px;
-    right: 50px;
-}
-
-.sidebar ul {
-    margin: 18px 0 39px 1px;
-}
-
-.sidebar ul li,
-.breadcrumbs ul li {
-    text-transform: uppercase;
-    font: 400 11px "Arial", sans-serif;
-    color: #717274;
-    line-height: 30px;
-    text-align: left;
-    list-style: none;
-}
-
-.sidebar li:before {
-    content: "\27A0";
-    /* Добавляем в качестве маркера символ */
-    margin-right: 10px;
-}
-
-.breadcrumbs a {
-    text-transform: uppercase;
-    text-decoration: none;
-}
-
-.breadcrumbs ul li {
-    display: inline-block;
-    background-color: #e5e3e7;
-    padding-left: 10px;
-    ;
-    padding-right: 10px;
-}
-.breadcrumbs ul li:hover{
-    background-color: #1d1d1d;
-}
-.breadcrumbs ul a:visited:hover {
-    color: indianred;
-}
-.breadcrumbs li::after {
-    content: "\|";
-    /* Добавляем в качестве маркера символ */
-    margin-left: 10px;
-}
-
-.breadcrumbs li:last-child {
-    border-radius: 0 8px 8px 0;
-}
-
-.breadcrumbs li:last-child:after {
-    content: "";
-    /* Добавляем в качестве маркера символ */
-}
-
-.sidebar p {
-    width: 255px;
-    height: 80px;
-    overflow: hidden;
-    margin-top: 24px;
-    font: 400 12px "Arial", sans-serif;
-    color: #717274;
-    line-height: 22px;
-    text-align: left;
-}
-
-.sidebar p>b {
-    font: 700 11px "Arial", sans-serif;
-    color: #3d3d3d;
-    line-height: 22px;
-    text-align: left;
-}
-
-
-/*=================контент=====================*/
-
-.content {
-    width: 492px;
-    left: 33px;
-    right: 66px;
-    position: relative;
-}
-
-article {
-    margin: 0 auto;
-    margin-bottom: 52px;
-}
-
-h1,
-h2,
-h3 {
-    text-transform: uppercase;
-    font: 400 14px "Oswald", sans-serif;
-    color: #1d1d1d;
-    line-height: 20px;
-    text-align: left;
-}
-
-h1,
-.sidebar h2 {
-    font: 400 32px "Oswald", sans-serif;
-}
-
-.sidebar h2 {
-    margin-top: -1px;
-}
-
-h2 {
-    font: 400 18px "Oswald", sans-serif;
-    margin-top: 20px;
-}
-
-h3 {
-    color: #a0a0a0;
-}
-
-.img-block {
-    width: 424px;
-    height: 215px;
-    border-radius: 16px;
-    overflow: hidden;
-    margin-top: 29px;
-}
-
-.img-reponsive {
-    display: block;
-    width: 100%;
-    max-width: 100%;
-    height: auto;
-}
-
-.article {
-    width: 492px;
-    height: 128px;
-    overflow: hidden;
-    margin-top: 25px;
-}
-
-.article_page {
-    width: 492px;
-    margin-top: 25px;
-}
-
-.content .dash_vert {
-    position: absolute;
-    top: 10px;
-    left: 555px;
-    width: 0px;
-    height: 100%;
-    border: 1px dashed #a0a0a0;
-}
-
-p {
-    font: 400 12px "Arial", sans-serif;
-    color: #717274;
-    line-height: 22px;
-    text-align: left;
-}
-
-.article strong {
-    font-family: Arial;
-    color: #3d3d3d;
-    font-size: 12px;
-    font-weight: 700;
-    line-height: 22px;
-    text-align: left;
-}
-
-button {
-    margin-top: 26px;
-    border-radius: 6px;
-    background-color: #3d3d3d;
-    width: 91px;
-    height: 30px;
-}
-
-.area button:active,
-.area button:hover {
-    background-color: #a0a0a0;
-}
-
-button span,
-.prev_pages span,
-.next_pages span,
-.score {
-    font-family: Arial;
-    color: #ffffff;
-    font-size: 11px;
-    font-weight: 700;
-    line-height: 25px;
-    text-align: center;
-    text-transform: uppercase;
-}
-
-.dash {
-    width: 498px;
-    height: 0px;
-    border: 1px dashed #a0a0a0;
-    margin-bottom: 39px;
-}
-
-.sidebar .dash {
-    width: 266px;
-    height: 0px;
-    border: 1px dashed #a0a0a0;
-    margin-bottom: 39px;
-}
-
-
-/*===========счетчик страниц===========*/
-
-.pages>.dash {
-    margin-bottom: 7px;
-}
-
-.pages {
-    display: inline-block;
-    margin-left: 43px;
-}
-
-.pages button {
-    margin-bottom: -10px;
-}
-
-.pages .prev_pages,
-.pages .next_pages {
-    border-radius: 6px;
-    background-color: #3d3d3d;
-    width: 78px;
-    height: 31px;
-    margin-top: -100px;
-}
-
-.pages .next_pages {
-    margin-top: 20px;
-    margin-left: 15px;
-}
-
-.pages .prev_pages {
-    margin-right: 19px;
-}
-
-.pages .score {
-    border-radius: 6px;
-    background-color: #3d3d3d;
-    width: 30px;
-    height: 31px;
-    margin-left: -2px;
-}
-
-.recent_posts h2 {
-    font: 600 32px "Open Sans Semibold Regular", sans-serif;
-    color: #3d3d3d;
-    line-height: 32px;
-    text-align: left;
-}
-
-
-/*=================футер===============*/
-
-.clr_footer {
-    height: 100px;
-    z-index: 4;
-}
-
-footer {
-    width: 894px;
-    height: 100px;
-    z-index: 5;
-    margin-top: -100px;
-    background-color: #e3e6e9;
-    margin: 0 auto;
-    padding: 24px;
-    box-shadow: 0 5 55px rgba(122, 122, 122, 0.5);
-}
-
-footer p {
-    font: 400 12px "Arial", sans-serif;
-    color: #717274;
-    line-height: 24px;
-    text-align: left;
-}
-body{
-    background: red !important;
-}
+  width: 900px;
+  height: 100vh;
+  background: #00b3ff; }
