--- a/css/style.sass
+++ b/css/style.sass
@@ -1,23 +1,77 @@
+$max-width: 1800px
+$extra-large: 1200px
+$large: 992px
+$medium: 768px
+$small: 576px
+$extra-small: 360px
+$min-width: 320px
+
+$font: 16px
+$base-font-color: #212529
+$color-1: #8795a1
+$color-2: #3d4852
+$color-3: #22292f
+$color-4: #606f7b
+$bg-color: #fff
+$line-color: #f8f9fa
+$button-color: #6c757d
+$blue: #0dcaf0
+$yellow: #ffc107
+$red: #dc3545
+
 body
-  width: 900px
+  background: $bg-color
+  color: $base-font-color
+
+.container
+  margin: 0 auto
+  position: relative
+  width: 100vw
+
+.header
+  margin: 0 auto
+  width: 100vw
+  height: 5vh
+  background: $red
+  padding: 2vh
+
+.main-slider
+  margin: 0 auto
+  width: 100vw
   height: 100vh
-  background: #00b3ff
+  padding: 0 15px
+  background: $yellow
 
+.main-list
+  margin: 0 auto
+  height: 100vh
+  padding: 0 15px
+  background: $blue
 
+.switch
+  margin: 0 auto
+  width: 10vw
+  height: 4vh
+  position: fixed
+  //background: $line-color
+  display: flex
+  justify-content: space-between
 
+  &__btn
+    width: 5vw
 
+    display: flex
+    justify-content: center
+    align-items: center
+    background: red
 
+    &--left
+      border-top-left-radius: 5px
+      border-bottom-left-radius: 5px
 
-
-
-
-
-
-
-
-
-
-
+    &--right
+      border-top-right-radius: 5px
+      border-bottom-right-radius: 5px
 
 
 
