--- a/style/style.css
+++ b/style/style.css
@@ -114,14 +114,14 @@ body {
   width: 100%;
   height: 100vh;
   padding: 0 15px;
-  background: #b7bfc5; }
+  background: #8795a1; }
 
 .main-list {
   margin: 0 auto;
   width: 100%;
   height: 100vh;
   padding: 0 15px;
-  background: #8795a1; }
+  background: #b7bfc5; }
 
 .switch {
   margin: 0 auto;
@@ -135,14 +135,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #6c757d; }
+    background: #6c757d;
+    box-shadow: 0px -5px 5px -5px rgba(34, 60, 80, 0.6) inset; }
     .switch__btn--left {
-      border-top-left-radius: 5px;
-      border-bottom-left-radius: 5px; }
+      border-top-left-radius: 7px;
+      border-bottom-left-radius: 7px; }
     .switch__btn--right {
-      border-top-right-radius: 5px;
-      border-bottom-right-radius: 5px; }
+      border-top-right-radius: 7px;
+      border-bottom-right-radius: 7px; }
     .switch__btn--active {
-      width: 95%;
-      transition: width 1000ms;
       background: #0dcaf0; }
