--- a/style/style.sass
+++ b/style/style.sass
@@ -36,14 +36,14 @@ body
   width: 100%
   height: 100vh
   padding: 0 15px
-  background: $color-5
+  background: $color-1
 
 .main-list
   margin: 0 auto
   width: 100%
   height: 100vh
   padding: 0 15px
-  background: $color-1
+  background: $color-5
 
 .switch
   margin: 0 auto
@@ -59,16 +59,15 @@ body
     justify-content: center
     align-items: center
     background: $button-color
+    box-shadow: 0px -5px 5px -5px rgba(34, 60, 80, 0.6) inset
 
     &--left
-      border-top-left-radius: 5px
-      border-bottom-left-radius: 5px
+      border-top-left-radius: 7px
+      border-bottom-left-radius: 7px
 
     &--right
-      border-top-right-radius: 5px
-      border-bottom-right-radius: 5px
+      border-top-right-radius: 7px
+      border-bottom-right-radius: 7px
 
     &--active
-      width: 95%
-      transition: width 1000ms
       background: $blue
