added slick slider, changed folder structure

--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -1,6 +1,7 @@
 @import "variables"
 @import "animate"
 @import "details"
+@import "slider"
 
 body
   background: $bg-color
@@ -47,7 +48,7 @@ body
 
 .switch
   margin: 0 auto
-  width: 10vw
+  width: 15vw
   height: 4vh
   display: flex
   justify-content: space-between
