--- a/src/style/style.css
+++ b/src/style/style.css
@@ -80,6 +80,23 @@
 .flipswitch-cb:checked + .flipswitch-label .flipswitch-switch {
   right: 0; }
 
+/* Слайдер */
+/* Слайдер запущен */
+/* Слайдер с точками */
+/* Ограничивающая оболочка */
+/* Лента слайдов */
+/* Слайд */
+/* Слайд активный (показывается) */
+/* Слайд основной */
+/* Слайд по центру */
+/* Клонированный слайд */
+/* Стрелка */
+/* Стрелка влево */
+/* Стрелка вправо */
+/* Стрелка не активная */
+/* Точки (булиты) */
+/* Активная точка */
+/* Элемент точки */
 body {
   background: #fff;
   color: #212529;
@@ -125,7 +142,7 @@ body {
 
 .switch {
   margin: 0 auto;
-  width: 10vw;
+  width: 15vw;
   height: 4vh;
   display: flex;
   justify-content: space-between;
