slider is configured, fonts are installed

--- a/src/style/_animate.scss
+++ b/src/style/_animate.scss
@@ -1,6 +1,6 @@
 @import "variables";
 
-[anim="ripple"] {
+.ripple {
 
   //  Customize effect by defining the following
   //  variables on the parent element
