--- a/src/style/_slider.scss
+++ b/src/style/_slider.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 /* Слайдер */
 .slick-slider{}
 /* Слайдер запущен */
@@ -5,9 +7,15 @@
 /* Слайдер с точками */
 .slick-slider.slick-dotted{}
 /* Ограничивающая оболочка */
-.slick-list {}
+.slick-list {
+  padding: 0;
+  overflow: hidden;
+}
 /* Лента слайдов */
-.slick-track{}
+.slick-track{
+  display: flex;
+  align-items: flex-start;
+}
 /* Слайд */
 .slick-slide{}
 /* Слайд активный (показывается) */
@@ -33,3 +41,77 @@
 .slick-dots li.slick-active{}
 /* Элемент точки */
 .slick-dots li button{}
+
+// стилизация слайдера на первой странице
+.slider{
+  min-width: 0;
+  text-align: center;
+  position: relative;
+}
+
+.slider .slick-arrow {
+  width: 50px;
+  height: 60px;
+  background: $color-3;
+  opacity: 0.7;
+  border: none;
+  cursor: pointer;
+  font-size: 36px;
+  color: $line-color;
+  font-family: 'Alegreya Sans', serif;
+  position: absolute;
+  top: 50%;
+  z-index: 5;
+}
+.slider .slick-arrow.slick-disabled{
+  opacity: 0.4;
+}
+.slider .slick-arrow.slick-prev {
+  line-height: 60px;
+  left: -10px;
+  transform: translate(-100%, -65%);
+
+}
+.slider .slick-arrow.slick-next {
+  line-height: 60px;
+  right: -10px;
+  transform: translate(100%, -65%);
+}
+.slider .slick-dots{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+.slider .slick-dots li {
+  list-style: none;
+  margin: 0 10px;
+}
+
+.slider .slick-dots button {
+  width: 15px;
+  height: 15px;
+  font-size: 0;
+  background: $button-color;
+  border: none;
+  border-radius: 50%;
+  z-index: 10;
+}
+
+.slider .slick-dots .slick-active button{
+  background-color: transparent;
+  border: 1px solid $blue;
+}
+
+.slider {
+  &__item {
+    height: 75vh;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+
