--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -3,72 +3,80 @@
 @import "details"
 @import "slider"
 
+*
+  box-sizing: border-box
+
 body
   background: $bg-color
+  font-family: 'Alegreya Sans', serif
+  font-weight: 400
   color: $base-font-color
-  box-sizing: border-box
-  overflow: hidden
 
 .container
-  margin: 0 auto
-  position: relative
   width: 100vw
   height: auto
+  position: relative
+  margin: 0 auto
 
 .header
-  margin: 0 auto
   width: 100%
   height: 5vh
   position: fixed
   padding: 2vh
-  z-index: 10
-
-.screen
-  position: absolute
-  left: 0
-  opacity: 0
-  transition: opacity 1500ms
-
-.screen--active
-  opacity: 1
-
-.main-slider
   margin: 0 auto
-  width: 100%
-  height: 100vh
-  padding: 0 15px
-  background: $color-1
-
-.main-list
-  margin: 0 auto
-  width: 100%
-  height: 100vh
-  padding: 0 15px
-  background: $color-5
+  z-index: 4
 
 .switch
-  margin: 0 auto
-  width: 15vw
+  width: 25vw
   height: 4vh
   display: flex
   justify-content: space-between
   cursor: pointer
+  margin: 0 auto
 
   &__btn
     width: 50%
     display: flex
     justify-content: center
     align-items: center
-    background: $button-color
-    box-shadow: 0px -5px 5px -5px rgba(34, 60, 80, 0.6) inset
-
-    &--left
-      border-top-left-radius: 7px
-      border-bottom-left-radius: 7px
+    background: $color-3
+    opacity: 0.7
+    color: $line-color
+    font-size: 24px
 
     &--right
-      border-top-right-radius: 7px
-      border-bottom-right-radius: 7px
+      border-left: 1px outset $base-font-color
 
     &--active
-      background: $blue
+      color: $blue
+
+.main-slider
+  width: 100%
+  height: 100vh
+  padding: 0 15px
+  background: $color-2
+  margin: 0 auto
+
+.wrapper
+  max-width: 88vw
+  height: 90vh
+  padding: 0 70px
+  margin: 10vh auto 0
+
+.main-list
+  width: 100%
+  height: 100vh
+  background: $color-5
+  padding: 0 15px
+  margin: 0 auto
+
+.screen
+  opacity: 0
+  transition: opacity 1500ms
+  position: absolute
+  left: 0
+
+.screen--active
+  opacity: 1
+  z-index: 2
+
