--- a/src/style/_animate.scss
+++ b/src/style/_animate.scss
@@ -16,7 +16,7 @@
     content: '';
     position:absolute;
     display: block;
-    background: var(--ripple-background, white);
+    background: var(--ripple-background, $color-4);
     border-radius: 50%;
     pointer-events: none;
 
