--- a/src/style/_slider.scss
+++ b/src/style/_slider.scss
@@ -1,49 +1,82 @@
 @import "variables";
 
 /* Слайдер */
-.slick-slider{}
+.slick-slider {
+}
+
 /* Слайдер запущен */
-.slick-slider.slick-initialized{}
+.slick-slider.slick-initialized {
+}
+
 /* Слайдер с точками */
-.slick-slider.slick-dotted{}
+.slick-slider.slick-dotted {
+}
+
 /* Ограничивающая оболочка */
 .slick-list {
   padding: 0;
   overflow: hidden;
 }
+
 /* Лента слайдов */
-.slick-track{
+.slick-track {
   display: flex;
   align-items: flex-start;
 }
+
 /* Слайд */
-.slick-slide{}
+.slick-slide {
+}
+
 /* Слайд активный (показывается) */
-.slick-slide.slick-active{}
+.slick-slide.slick-active {
+}
+
 /* Слайд основной */
-.slick-slide.slick-current{}
+.slick-slide.slick-current {
+}
+
 /* Слайд по центру */
-.slick-slide.slick-center{}
+.slick-slide.slick-center {
+}
+
 /* Клонированный слайд */
-.slick-slide.slick-cloned{}
+.slick-slide.slick-cloned {
+}
+
 /* Стрелка */
-.slick-arrow{}
+.slick-arrow {
+}
+
 /* Стрелка влево */
-.slick-arrow.slick-prev{}
+.slick-arrow.slick-prev {
+}
+
 /* Стрелка вправо */
-.slick-arrow.slick-next{}
+.slick-arrow.slick-next {
+}
+
 /* Стрелка не активная */
-.slick-arrow.slick-disabled{}
+.slick-arrow.slick-disabled {
+}
+
 /* Точки (булиты) */
-.slick-dots{}
-.slick-dots li{}
+.slick-dots {
+}
+
+.slick-dots li {
+}
+
 /* Активная точка */
-.slick-dots li.slick-active{}
+.slick-dots li.slick-active {
+}
+
 /* Элемент точки */
-.slick-dots li button{}
+.slick-dots li button {
+}
 
 // стилизация слайдера на первой странице
-.slider{
+.slider {
   min-width: 0;
   text-align: center;
   position: relative;
@@ -52,37 +85,37 @@
 .slider .slick-arrow {
   width: 50px;
   height: 60px;
-  background: $color-3;
-  opacity: 0.7;
-  border: none;
+  background: $line-color;
+  border: 1px solid $yellow;
   cursor: pointer;
   font-size: 48px;
-  color: $line-color;
+  color: $yellow;
   font-family: 'Alegreya Sans', serif;
   position: absolute;
   top: 50%;
   z-index: 5;
 }
-.slider .slick-arrow.slick-disabled{
-  opacity: 0.4;
-}
+
 .slider .slick-arrow.slick-prev {
   line-height: 60px;
   left: -10px;
   transform: translate(-100%, -65%);
 
 }
+
 .slider .slick-arrow.slick-next {
   line-height: 60px;
   right: -10px;
   transform: translate(100%, -65%);
 }
-.slider .slick-dots{
+
+.slider .slick-dots {
   display: flex;
   align-items: center;
   justify-content: center;
 
 }
+
 .slider .slick-dots li {
   list-style: none;
   margin: 0 10px;
@@ -94,18 +127,23 @@
   font-size: 0;
   background: $button-color;
   border: none;
+  opacity: 0.4;
   border-radius: 50%;
   z-index: 10;
 }
 
-.slider .slick-dots .slick-active button{
+.slider .slick-dots .slick-active button {
   background-color: transparent;
   border: 1px solid $blue;
 }
 
 .slider {
   &__item {
+    width: 100%;
     height: 75vh;
+    background: $bg-color;
+    overflow: auto;
+    padding: 3vh;
 
     img {
       width: 100%;
@@ -113,5 +151,31 @@
       object-fit: cover;
     }
   }
+
+  & .column-2 {
+    column-count: 2;
+    // column-width: 250px;
+    column-gap: 50px;
+    column-rule: 1px dotted $color-2;
+    font-size: 24px;
+    font-weight: 400;
+    text-align: justify;
+
+    p {
+      margin-top: 0;
+    }
+  }
+
+  h2 {
+    text-align: center;
+    column-span: all;
+    text-transform: uppercase;
+  }
+
+  .portfolio__video,
+  .portfolio__context {
+    break-inside: avoid;
+  }
+
 }
 
