--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -12,6 +12,25 @@ body
   font-weight: 400
   color: $base-font-color
 
+h1
+  font-weight: 400
+  font-size: 2em
+  color: $yellow
+
+h2,
+.portfolio__title
+  font-weight: 400
+  font-size: 2em
+  color: $blue
+
+a
+  font-weight: 500
+  color: $blue
+  text-decoration: none
+  &:hover,
+  &:focus
+    color: $yellow
+
 .container
   width: 100vw
   height: auto
@@ -39,22 +58,22 @@ body
     display: flex
     justify-content: center
     align-items: center
-    background: $color-3
-    opacity: 0.7
-    color: $line-color
+    background: $line-color
+    color: $base-font-color
     font-size: 24px
 
     &--right
-      border-left: 1px outset $base-font-color
+      border-left: 1px dotted $color-3
 
     &--active
       color: $blue
+      font-weight: 500
 
 .main-slider
   width: 100%
   height: 100vh
   padding: 0 15px
-  background: $color-2
+  background: $bg-color
   margin: 0 auto
 
 .wrapper
@@ -66,7 +85,7 @@ body
 .main-list
   width: 100%
   height: 100vh
-  background: $color-5
+  background: $bg-color
   padding: 0 15px
   margin: 0 auto
 
@@ -79,3 +98,4 @@ body
 .screen--active
   opacity: 1
   z-index: 2
+
