--- a/src/style/_slider.scss
+++ b/src/style/_slider.scss
@@ -142,40 +142,13 @@
     width: 100%;
     height: 75vh;
     background: $bg-color;
+    border: 3px solid $line-color;
+    border-radius: 5px;
     overflow: auto;
     padding: 3vh;
-
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
   }
-
-  & .column-2 {
-    column-count: 2;
-    // column-width: 250px;
-    column-gap: 50px;
-    column-rule: 1px dotted $color-2;
-    font-size: 24px;
-    font-weight: 400;
-    text-align: justify;
-
-    p {
-      margin-top: 0;
-    }
-  }
-
-  h2 {
-    text-align: center;
-    column-span: all;
-    text-transform: uppercase;
-  }
-
-  .portfolio__video,
-  .portfolio__context {
-    break-inside: avoid;
-  }
-
+ & .inner__slider {
+   width: 100%;
+   height: 100%;
+ }
 }
-
