--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -6,6 +6,7 @@
 *
   box-sizing: border-box
 
+// объявление базовых стилей
 body
   background: $bg-color
   font-family: 'Alegreya Sans', serif
@@ -17,11 +18,11 @@ h1
   font-size: 2em
   color: $yellow
 
-h2,
-.portfolio__title
+h2
   font-weight: 400
   font-size: 2em
   color: $blue
+  text-transform: uppercase
 
 a
   font-weight: 500
@@ -31,6 +32,18 @@ a
   &:focus
     color: $yellow
 
+img
+  width: 100%
+  height: 100%
+  object-fit: cover
+
+p
+  margin-top: 0
+
+video
+  width: 100%
+
+//----------------------------------
 .container
   width: 100vw
   height: auto
@@ -63,7 +76,7 @@ a
     font-size: 24px
 
     &--right
-      border-left: 1px dotted $color-3
+      border-left: 1px dotted $color-5
 
     &--active
       color: $blue
@@ -81,6 +94,29 @@ a
   height: 90vh
   padding: 0 70px
   margin: 10vh auto 0
+
+.portfolio
+  font-size: 24px
+  font-weight: 400
+  display: flex
+  flex-wrap: wrap
+  align-items: center
+
+  &__title
+    width: 100%
+    text-align: center
+
+  &__video,
+  &__content
+    width: calc(50% - 1px)
+    text-align: justify
+    padding: 1em
+
+  &__video
+    margin-bottom: 1em
+
+  &__content
+    border-left: 2px dotted $color-5
 
 .main-list
   width: 100%
