--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -98,13 +98,15 @@ video
 .portfolio
   font-size: 24px
   font-weight: 400
-  display: flex
-  flex-wrap: wrap
-  align-items: center
 
   &__title
     width: 100%
     text-align: center
+    margin: 0.3em
+
+  &__grid
+    display: flex
+    align-items: flex-start
 
   &__video,
   &__content
