--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -24,6 +24,12 @@ h2
   color: $blue
   text-transform: uppercase
 
+h3
+  font-weight: 400
+  font-size: 1.2em
+  color: $blue
+  text-transform: uppercase
+
 a
   font-weight: 500
   color: $blue
@@ -39,6 +45,7 @@ img
 
 p
   margin-top: 0
+  font-size: 24px
 
 video
   width: 100%
@@ -52,7 +59,6 @@ video
 
 .header
   width: 100%
-  height: 5vh
   position: fixed
   padding: 2vh
   margin: 0 auto
@@ -96,7 +102,6 @@ video
   margin: 10vh auto 0
 
 .portfolio
-  font-size: 24px
   font-weight: 400
 
   &__title
@@ -122,10 +127,12 @@ video
 
 .main-list
   width: 100%
-  height: 100vh
+  height: auto
   background: $bg-color
-  padding: 0 15px
-  margin: 0 auto
+  margin: 5vh auto
+
+.grey
+  background: $line-color
 
 .screen
   opacity: 0
@@ -137,3 +144,25 @@ video
   opacity: 1
   z-index: 2
 
+.list__item
+  width: 100%
+  height: auto
+  padding: 15px 25px
+
+  p
+    margin-top: 10px
+
+.item
+  &__link
+    margin-top: 0
+    color: $color-3
+    text-transform: uppercase
+    cursor: pointer
+    &:hover
+      color: $yellow
+
+.item__description
+  display: none
+
+.visible
+  display: block
